# scrcpy-masker

./: .gitignore  Cargo.toml  README-zh.md  README.md  build-help.md  build.ps1  build.rs  build.sh
.github/workflows/: build-windows.yml  main.yml  release.yml
assets/: scrcpy-mask-server-v2.4
assets/lib/darwin-arm64/: libavformat.61.dylib
assets/lib/linux-x64/: libavdevice.so.61  libavformat.so.61  libavutil.so.59  libpostproc.so.58  libswscale.so.8
assets/lib/macos-arm64/: libavdevice.61.dylib  libavfilter.10.dylib  libavutil.59.dylib  libpostproc.58.dylib  libswresample.5.dylib  libswscale.8.dylib
assets/locales/: en-US.json  zh-CN.json
frontend/: package.json  pnpm-lock.yaml  uno.config.ts
frontend/src/: App.scss  App.tsx  hooks.ts  main.tsx  router.tsx  utils.ts
frontend/src/components/: Devices.tsx  LoadingWrapper.tsx  Settings.tsx  Sider.tsx  Welcome.tsx
frontend/src/store/: localConfig.ts  localConfigReducer.ts  other.ts  store.ts
src/: config.rs  lib.rs  main.rs  update.rs  utils.rs
src/mapping/: config.rs  mod.rs  tap.rs  utils.rs
src/mask/: mask_command.rs  mod.rs  video.rs
src/mask/mapping/: _temp.rs  binding.rs  cast_spell.rs  config.rs  cursor.rs  direction_pad.rs  fire.rs  joystick.rs  mod.rs  observation.rs  (+6 more)
src/scrcpy/: adb.rs  connection.rs  constant.rs  control_msg.rs  controller.rs  media.rs  mod.rs  video_msg.rs
src/server/: adb.rs  binary.rs  mod.rs  scrcpy.rs
src/ui/: basic.rs  button_label.rs  mapping_label.rs  mod.rs
src/utils/: mod.rs  share.rs
src/web/: config.rs  device.rs  mapping.rs  mask.rs  mod.rs  ws.rs
(+25 files in other folders)
